# HalfHashedKitty

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  DOCS.md  PRODUCTION_ROADMAP.md  README.md  TODO.md  build.gradle  build.gradle.kts  index.html  settings.gradle  settings.gradle.kts  version.properties
.github/workflows/: build-installer.yml  build.yml  jules.yml
app/: README.md  build.gradle  build.gradle.kts  lint-baseline.xml
app/desktop-app/: build.sh  hashcat_manager.py  main_gui.py  server.py
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
desktop-app/: .env  dependency-reduced-pom.xml  docker-compose.yml  pom.xml  run.bat  run.sh
docs/: INDEX.md  UI_UX.md  conduct.md  data_layer.md  fauxpas.md  file_dictionary.md  misc.md  performance.md  screens.md  task_flow.md  testing.md  workflow.md
gokitty/: .gitignore  go.mod  go.sum  index.html  main.go
gokitty-relay/: BUILD.md  go.mod  go.sum
gokitty-relay/cmd/gokitty-relay/: main.go
gokitty-relay/mobile/: mobile.go
gokitty-relay/models/: models.go
gokitty-relay/relay/: relay.go
gokitty/pkg/client/: client.go
gokitty/pkg/hashcat/: hashcat.go
gokitty/pkg/models/: models.go
gokitty/pkg/relay/: relay.go
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hashkitty-cpp/: CMakeLists.txt  README.md  main.cpp
hashkitty-cpp/src/: GuiManager.cpp  GuiManager.h  HashcatManager.cpp  HashcatManager.h  PcapManager.cpp  PcapManager.h  Server.cpp  Server.h
hashkitty-gui/: requirements.txt  server.py
hashkitty-java/: README.md  settings.gradle
hashkitty-java/app/: build.gradle  build.gradle.kts
hashkitty-java/gradle/: libs.versions.toml
relay-server/: requirements.txt  server.py
src/: MainCLI.java
(+129 files in other folders)
